--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "focus-visible": "^5.2.1",
-    "framer-motion": "^12.23.16",
     "geist": "^1.5.1",
+    "motion": "^12.26.2",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "plaiceholder": "^3.0.0",
